# changedetection

./: .gitignore  pyproject.toml
backend/: config.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
backend/routers/: changes.py  demo.py  inference.py  properties.py  videos.py
backend/services/: change_engine.py  detector.py  geo_matcher.py  kml_parser.py  shapefile_parser.py  video_processor.py
backend/utils/: geometry_utils.py  gps_utils.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src/api/: client.js
frontend/src/components/: ChangeList.jsx  FrameEvidence.jsx  Legend.jsx  MapView.jsx  PredictionList.jsx  PropertyPanel.jsx  ReviewActions.jsx  StatusBar.jsx  UploadPanel.jsx
