[project]
name = "changedetection"
version = "0.1.0"
description = "Property Typology Change Detection System"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "python-multipart>=0.0.9",
    "shapely>=2.0",
    "geopandas>=1.0",
    "fastkml>=1.0",
    "lxml>=5.0",
    "opencv-python-headless>=4.9",
    "ultralytics>=8.0",
    "pyproj>=3.6",
    "gpxpy>=1.6",
    "aiofiles>=24.0",
    "pyshp>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "pytest-asyncio>=0.24",
]
